# python-afsapi

./: .gitignore  .pre-commit-config.yaml  README.md  async_tests.py  pyproject.toml  setup.cfg
.github/workflows/: linting.yaml  python-publish.yml  release.yaml  tests.yaml  typing.yaml
afsapi/: __init__.py  api.py  const.py  exceptions.py  models.py  nodes.py  response.py  throttler.py  utils.py
tests/: conftest.py  test_api_refactoring.py  test_device_recordings.py  test_device_recordings_write.py  test_list_parsing.py  test_response.py  test_throttler.py  test_utils.py
tests/cassettes/test_device_recordings/: test_get_eq_preset.yaml  test_get_equalisers.yaml  test_get_modes.yaml  test_get_modes_empty_closed_label.yaml  test_get_modes_empty_label.yaml  test_get_play_status.yaml  test_get_power.yaml  test_get_presets.yaml  test_get_sleep.yaml  test_get_volume.yaml  test_info_endpoints.yaml  test_known_fsapi_endpoint_responds.yaml  test_play_info_endpoints.yaml
tests/cassettes/test_device_recordings_write/: test_play_control_commands.yaml  test_set_mute_roundtrip.yaml  test_set_power_roundtrip.yaml  test_set_sleep_roundtrip.yaml  test_set_volume_roundtrip.yaml
