[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "afsapi"
description = "Asynchronous implementation of the Frontier Silicon API"
readme = { file = "README.md", content-type = "text/markdown" }
license = "Apache-2.0"
authors = [{ name = "Krasimir Zhelev", email = "krasimir.zhelev@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["aiohttp>=3.9,<4", "defusedxml>=0.7.1"]
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Homepage = "https://github.com/zhelev/python-afsapi.git"

[dependency-groups]
dev = [
    "codespell>=2.4.2",
    "covdefaults>=2.3.0",
    "mypy>=1.11",
    "prek>=0.3.9",
    "pylint>=4.0.5",
    "pytest>=9",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-recording>=0.13.4",
    "ruff>=0.6",
    "types-defusedxml>=0.7.0.20260408",
    "yamllint>=1.38.0",
]

[tool.hatch.version]
source = "vcs"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["afsapi*"]

[tool.setuptools_scm]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["device: integration tests against a real Frontier Silicon device"]

[tool.mypy]
# Specify the target platform details in config, so your developers are
# free to run mypy on Windows, Linux, or macOS and get consistent
# results.
platform = "linux"
python_version = "3.12"

# show error messages from unrelated files
follow_imports = "normal"

# suppress errors about unsatisfied imports
ignore_missing_imports = true

# be strict
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true
warn_incomplete_stub = true
warn_no_return = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ruff]
line-length = 120
target-version = "py310"
src = ["afsapi", "tests"]
extend-exclude = ["fsapi-tools"]

[tool.ruff.lint]
select = ["ALL"]

ignore = [
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
]

[tool.ruff.lint.per-file-ignores]

"async_tests.py" = ["T201"] # Allow prints
"tests/**" = ["S101"] # Allow use of assert in tests

[tool.pylint.MASTER]
extension-pkg-whitelist = [
  "orjson",
]
ignore = [
  "tests",
]

[tool.pylint.BASIC]
good-names = [
  "_",
  "ex",
  "fp",
  "i",
  "id",
  "j",
  "k",
  "on",
  "Run",
  "T",
]

[tool.pylint.DESIGN]
max-attributes = 8

[tool.pylint."MESSAGES CONTROL"]
disable = [
  "duplicate-code",
  "format",
  "unsubscriptable-object",
]

[tool.pylint.SIMILARITIES]
ignore-imports = true

[tool.pylint.FORMAT]
max-line-length = 120
